--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "383038/yii2-eth-api",
+  "name": "u383038/yii2-eth-api",
   "description": "Extension for integration Ethereum in yii2 project",
   "type": "yii2-extension",
   "keywords": ["yii2","extension","ethereum", "eth"],
   "license": "BSD-3-Clause",
   "authors": [
     {
-      "name": "383038",
+      "name": "u383038",
       "email": "antonsolodkov66@gmail.com"
     }
   ],
@@ -17,7 +17,7 @@
   },
   "autoload": {
     "psr-4": {
-      "383038\\ethapi\\": ""
+      "u383038\\eth\\": ""
     }
   }
 }
